               "EXP OR LIN"’ weights had been not considered;
               corrected,

             • add argument ‘fit.force_through_origin’, it does exactly
               what you may expect from such argument (#225, requested
               by Alice Versendaal),

             • get rid of some not very informative warning messages if
               some fitting failed.

         • ‘plot_RLum()’

             • The ‘...’ argument ‘main’ can be now be of type ‘list’
               if a ‘list’ of objects is provided. This allows to set
               different plot titles for this specific plot option.

         • ‘plot_RLum.Analysis()’

             • The ‘...’ argument ‘main’ can now be provided as vector
               if ‘combine = TRUE’.

         • ‘readBIN2R()’

             • Set function on deprecated, new name: ‘read_BIN2R()’

         • ‘readSPE2R()’

             • Set function on deprecated, new name: ‘read_SPE2R()’.

         • ‘readXSYG2R()’

             • Set function to deprecated, new name: ‘read_XSYG2R()’,

             • the argument ‘file’ can now handle a ‘list’ of files,
               along with this just a path to directory is allowed
               instead a path to a file.  In this case the function
               tries to import all XSYG-files that can be found in the
               directory.

         • ‘Risoe.BINfileData2RLum.Analysis()’

             • A new argument ‘grain’ can be used to further limit the
               transformation to specific grains in the data set,

             • the arguement ‘pos’ is no longer required. If nothing is
               provided every position will be transformed and the
               function returns a list of ‘RLum.Analysis’-objects,

             • along with this the argument ‘pos’ now accepts a vector
               as input (i.e., more than on position can be provided
               for the conversion),

             • new argument ‘txtProgressBar’ addd. The default is set