@@ -1058,11 +1058,11 @@
 </td>
 <td class=cellinside><br /> A dose response curve is produced for luminescence measurements using a<br /> regenerative protocol.<br />
 </td>
-<td class=cellinside>1.7.2
+<td class=cellinside>1.7.3
 </td>
-<td class=cellinside>2015-09-23
+<td class=cellinside>2015-09-25
 </td>
-<td class=cellinside>19:27:37
+<td class=cellinside>15:29:03
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
