@@ -168,7 +168,8 @@
         not considered; corrected,
         \item add argument \code{fit.force_through_origin}, it does exactly what you may expect from such
         argument (#225, requested by Alice Versendaal),
-        \item get rid of some not very informative warning messages if some fitting failed.
+        \item get rid of some not very informative warning messages if some fitting failed and if start
+        parameters are not set sufficiently.
 
 
       }
