@@ -185,7 +185,8 @@ Changes in version 0.5.0 (, 2015):
                by Alice Versendaal),
 
              • get rid of some not very informative warning messages if
-               some fitting failed.
+               some fitting failed and if start parameters are not set
+               sufficiently.
 
          • ‘plot_RLum()’
 
